# Orienteer

./: .dockerignore  .gitignore  .gitmodules  Dockerfile.frontend  INSTALL.md  Makefile  README.md  _package-lock.json  babel.config.js  compile-styles.coffee  compile-styles.js  compile-styles.ts  compiles-styles.ts  docker-compose.yaml  install  jest.config.js  main.js  orienteer-config.json  package-lock.json  package.json  pyproject.toml  run-data-service  setup-database  setup.py  tsconfig.json  views.sql  webpack.config.js
__archive/: INSTALL.md  install  lerna.json  main.js
__archive/app-container/: app.ts
__archive/electron-app/: package-lock.json  package.json
__archive/orienteer-backend/: database.ts
app-container/: app.coffee  config.coffee  index.coffee  index.ts  server.coffee  server.ts
app-container/render/: index.html  register.js  register.ts  setup-styles.coffee  setup.js  setup.ts  (+3 more)
core/: Dockerfile  _setup.py  pyproject.toml  run-cli.py  setup.py
core/orienteer/: __init__.py  cli.py  config.py  database.py
core/orienteer/core/: __init__.py  api.py  proj.py
core/orienteer/fixtures/: 04-mars-crs-defs.sql  06-attitude-data.sql  07-api-views.sql
core/orienteer/models/: __init__.py  dataset.py
core/orienteer/models/attitude/: __init__.py
core/orienteer/models/feature/: __init__.py  extract.py  interpolation.py
core/orienteer/projections/: mars-transverse-mercator.wkt
core/orienteer/sql/: 01-schema-additions.sql  02-mapboard-integration.sql  add-dataset.sql  api-views.sql  attitude-data.sql  create-api-views.sql  init-attitudes.sql
core/orienteer/util/: sql.py
electron-app/: package-lock.json  package.json  webpack.renderer.js
electron-app-v2/: package-lock.json
elevation/: __init__.py  __main__.py  database.py  manage.py  wsgi.py
frontend/: .babelrc  api.coffee  api.ts  data-manager.coffee  database.coffee  hooks.ts  index.coffee  log-handler.coffee  main.scss  menu.coffee  options.coffee  package-lock.json  package.json  shared  style.scss  transforms.coffee  tsconfig.json  util.coffee
orienteer_api/: shared
scripts/: frontend-dist
(+266 files in other folders)
