[tool.poetry]
name = "orienteer"
version = "2.0.0"
description = ""
authors = ["Daven Quinn <dev@davenquinn.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
