[tool.poetry]
authors = ["Daven Quinn <dev@davenquinn.com>"]
description = ""
name = "Orienteer"
version = "2.0.0"

[tool.poetry.dependencies]
Attitude = {path = "./deps/Attitude", develop = true}
Fiona = "^1.8.20"
Flask = "^2.0.2"
SQLAlchemy = "^1.4.27"
Shapely = "^1.8.0"
numpy = "^1.21.4"
pg_projector = {path = "./deps/pg-projector", develop = true}
pyproj = "^3.3.0"
python = ">=3.8,<3.11"
rasterio = "^1.2.10"
scipy = "^1.7.2"
subdivide = {path = "./deps/subdivide", develop = true}

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
